--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-
-    <body>
-        <h1>Gereja Presbyterian Bukit Sion Indonesia</h1>
-        <h2>Cabang Bandung</h2>
-        <div id="navbar">
-            Navbar
-        </div>
-        <div>
-            Warta
-        </div>
-        <div>
-            Seri Sejarah Penebusan
-        </div>
-        <div>
-            Jadwal Ibadah
-        </div>
-    </body>
-</html>
+<br>
+<h2>Hari Raya Pengucapan Syukur</h2>
+<img src="https://gpbsibdg.files.wordpress.com/2018/11/20181118_120422.jpg?w=300"></img>
+<img src="https://gpbsibdg.files.wordpress.com/2018/11/20181118_115536.jpg?w=300"></img>
+<br><br>
+<h2>Rambu Iman Tahun 2018</h2>
+<img src="//gpbsibdg.files.wordpress.com/2018/11/rambu-iman.png?w=450" width="125%" height="125%"></img>
+<br><br>
+<h2>Seri Sejarah Penebusan hadir dalam bentuk e-Book</h2>
+<img src="https://gpbsibdg.files.wordpress.com/2018/11/d6279-36788271_198281237690470_2423325869591232512_n.jpg"></img>
+<br><br>
